--- a/41.md
+++ b/41.md
@@ -1,6 +1,4 @@
-# 4.1 MNIST with Lasagne
-
-# 4. Usage example
+# 4.1 Lasagne-1
 
 ### Lasagne MNIST example<sup style="font-size:12px;">[[9]](#ref9)</sup>
 ```python
