--- a/41.md
+++ b/41.md
@@ -362,6 +362,21 @@ if __name__ == '__main__':
 main(**kwargs)
 ```
 執行結果：
+```
+(etc.)
+Epoch 499 of 500 took 0.825s
+  training loss:                0.017662
+  validation loss:              0.053915
+  validation accuracy:          98.63 %
+Epoch 500 of 500 took 0.827s
+  training loss:                0.018308
+  validation loss:              0.053412
+  validation accuracy:          98.64 %
+Final results:
+  test loss:                    0.046705
+  test accuracy:                98.64 %
+
+```
 
 ---
 <sup id="ref9">[9]</sup> https://github.com/Lasagne/Lasagne/blob/master/examples/mnist.py
