--- a/41.md
+++ b/41.md
@@ -2,6 +2,7 @@
 
 ### Lasagne MNIST example<sup style="font-size:12px;">[[9]](#ref9)</sup>
 ```python
+#!/usr/bin/env python
 """
 Usage example employing Lasagne for digit recognition using the MNIST dataset.
 This example is deliberately structured as a long flat file, focusing on how
