--- a/42.md
+++ b/42.md
@@ -106,6 +106,36 @@ def main():
 if __name__ == '__main__':
     main()
 ```
+測試結果：
+```
+Got 50000 testing datasets.
+# Neural Network with 79510 learnable parameters
+
+## Layer information
+
+  #  name      size
+---  ------  ------
+  0  input      784
+  1  hidden     100
+  2  output      10
+
+  epoch    trn loss    val loss    trn/val    valid acc  dur
+-------  ----------  ----------  ---------  -----------  ----   -
+      1     0.60817     0.32911    1.84796      0.90925  0.23   s
+      2     0.31281     0.26981    1.15938      0.92364  0.22   s
+      3     0.25968     0.23361    1.11160      0.93413  0.22   s
+      4     0.22340     0.20855    1.07121      0.94093  0.23   s
+      5     0.19677     0.19023    1.03438      0.94513  0.24   s
+      6     0.17600     0.17600    1.00001      0.95002  0.25   s
+      7     0.15927     0.16473    0.96688      0.95312  0.25   s
+      8     0.14554     0.15572    0.93461      0.95632  0.25   s
+      9     0.13394     0.14833    0.90296      0.95702  0.25   s
+     10     0.12406     0.14209    0.87311      0.95962  0.26   s
+Feature vector (100-110): [ 0.  0.  0.  0.  0.  0.  0.  0.  0   .  0.]
+Label: 7
+Predicted: [7]
+
+```
 
 ---
 <sup id="ref10">[10]</sup> [Best python library for neural networks](http://datascience.stackexchange.com/questions/694/best-python-library-for-neural-networks)
