--- a/41.md
+++ b/41.md
@@ -364,6 +364,14 @@ main(**kwargs)
 ```
 執行結果：
 ```
+Using gpu device 0: Quadro K2200 (CNMeM is disabled, CuDNN 4007)
+Loading data...
+Building model and compiling functions...
+Starting training...
+Epoch 1 of 500 took 0.837s
+  training loss:        1.196399
+  validation loss:      0.402135
+  validation accuracy:      88.91 %
 (etc.)
 Epoch 499 of 500 took 0.825s
   training loss:                0.017662
