--- a/41.md
+++ b/41.md
@@ -363,6 +363,7 @@ if __name__ == '__main__':
 main(**kwargs)
 ```
 執行結果：
+#####using GPU（約7分鐘）
 ```
 Using gpu device 0: Quadro K2200 (CNMeM is disabled, CuDNN 4007)
 Loading data...
@@ -385,6 +386,9 @@ Final results:
   test loss:                    0.046705
   test accuracy:                98.64 %
 
+```
+##### using CPU（約）
+```
 ```
 
 ---
