--- a/41.md
+++ b/41.md
@@ -387,8 +387,17 @@ Final results:
   test accuracy:                98.64 %
 
 ```
-##### using CPU（約）
+##### using CPU（約83分鐘）
 ```
+Loading data...
+Building model and compiling functions...
+Starting training...
+Epoch 1 of 500 took 10.398s
+  training loss:        1.220270
+  validation loss:      0.409670
+  validation accuracy:      88.30 %
+(etc.)
+
 ```
 
 ---
