--- a/41.md
+++ b/41.md
@@ -397,7 +397,17 @@ Epoch 1 of 500 took 10.398s
   validation loss:      0.409670
   validation accuracy:      88.30 %
 (etc.)
-
+Epoch 499 of 500 took 10.327s
+  training loss:        0.018568
+  validation loss:      0.054652
+  validation accuracy:      98.75 %
+Epoch 500 of 500 took 10.262s
+  training loss:        0.018887
+  validation loss:      0.055043
+  validation accuracy:      98.67 %
+Final results:
+  test loss:            0.048217
+  test accuracy:        98.71 %
 ```
 
 ---
